[gd_scene load_steps=2 format=3 uid="uid://cas0jj85j671k"]

[ext_resource type="Script" path="res://lobby.gd" id="1_i6bmw"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -168.0
offset_right = 156.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Multiplayer Counter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -73.0
offset_right = 110.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6bmw")

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 78.0
offset_bottom = 34.0
text = "Address:"

[node name="Address" type="LineEdit" parent="LobbyPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 34.0
offset_right = 211.0
offset_bottom = 65.0
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="HostButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 79.0
offset_right = 91.0
offset_bottom = 110.0
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 79.0
offset_right = 210.0
offset_bottom = 110.0
text = "Join"

[node name="StatusOk" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 114.0
offset_right = 211.0
offset_bottom = 137.0
horizontal_alignment = 1

[node name="StatusFail" type="Label" parent="LobbyPanel"]
modulate = Color(1, 0.427451, 0.345098, 1)
layout_mode = 0
offset_left = 11.0
offset_top = 114.0
offset_right = 211.0
offset_bottom = 137.0
horizontal_alignment = 1

[connection signal="pressed" from="LobbyPanel/HostButton" to="LobbyPanel" method="_on_host_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="LobbyPanel" method="_on_join_pressed"]
